[gd_scene load_steps=53 format=3 uid="uid://bsrmgycmaxv8y"]

[ext_resource type="Texture2D" uid="uid://c0mpd864uilyr" path="res://Assets/Main Characters/Appearing (96x96).png" id="1_ga8r7"]
[ext_resource type="Script" path="res://Objects/player.gd" id="1_vc07f"]
[ext_resource type="Texture2D" uid="uid://b6onodtp12knt" path="res://Assets/Main Characters/Virtual Guy/Double Jump (32x32).png" id="2_88d6n"]
[ext_resource type="Texture2D" uid="uid://vqjaphwonsl5" path="res://Assets/Main Characters/Virtual Guy/Fall (32x32).png" id="3_rae1y"]
[ext_resource type="Texture2D" uid="uid://25iyp8m6ao0" path="res://Assets/Main Characters/Virtual Guy/Idle (32x32).png" id="4_1wuwu"]
[ext_resource type="Texture2D" uid="uid://ujyijguo2hbi" path="res://Assets/Main Characters/Virtual Guy/Jump (32x32).png" id="5_kgrnm"]
[ext_resource type="Texture2D" uid="uid://cfnmoo4hipwcd" path="res://Assets/Main Characters/Virtual Guy/Run (32x32).png" id="6_b1djv"]
[ext_resource type="Texture2D" uid="uid://bihiqqkv3gjv8" path="res://Assets/Other/Dust Particle.png" id="8_mbcms"]
[ext_resource type="AudioStream" uid="uid://dsyep6dgjaeja" path="res://Audio/SFX/hitHurt.wav" id="9_tlwww"]
[ext_resource type="AudioStream" uid="uid://dpfamf1dgcxce" path="res://Audio/SFX/jump (1).wav" id="10_63k56"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkjx1"]
size = Vector2(20, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_14jxw"]
atlas = ExtResource("1_ga8r7")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi5x8"]
atlas = ExtResource("1_ga8r7")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnhdj"]
atlas = ExtResource("1_ga8r7")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocaq6"]
atlas = ExtResource("1_ga8r7")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie11d"]
atlas = ExtResource("1_ga8r7")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_57pgc"]
atlas = ExtResource("1_ga8r7")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1d47"]
atlas = ExtResource("1_ga8r7")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuu6f"]
atlas = ExtResource("2_88d6n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fvr8"]
atlas = ExtResource("2_88d6n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vpj3"]
atlas = ExtResource("2_88d6n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_het4h"]
atlas = ExtResource("2_88d6n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n2ri"]
atlas = ExtResource("2_88d6n")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqubs"]
atlas = ExtResource("2_88d6n")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvxfh"]
atlas = ExtResource("4_1wuwu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_225eh"]
atlas = ExtResource("4_1wuwu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_se7h1"]
atlas = ExtResource("4_1wuwu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf8js"]
atlas = ExtResource("4_1wuwu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1hlq"]
atlas = ExtResource("4_1wuwu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh8ua"]
atlas = ExtResource("4_1wuwu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irjsu"]
atlas = ExtResource("4_1wuwu")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s58cw"]
atlas = ExtResource("4_1wuwu")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaw01"]
atlas = ExtResource("4_1wuwu")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u3fi"]
atlas = ExtResource("4_1wuwu")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y32lr"]
atlas = ExtResource("4_1wuwu")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfa6s"]
atlas = ExtResource("6_b1djv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgpcd"]
atlas = ExtResource("6_b1djv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p46aw"]
atlas = ExtResource("6_b1djv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsk1g"]
atlas = ExtResource("6_b1djv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc1u1"]
atlas = ExtResource("6_b1djv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64ebr"]
atlas = ExtResource("6_b1djv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_085sp"]
atlas = ExtResource("6_b1djv")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kj5l"]
atlas = ExtResource("6_b1djv")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dgeg"]
atlas = ExtResource("6_b1djv")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ib1p"]
atlas = ExtResource("6_b1djv")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrukj"]
atlas = ExtResource("6_b1djv")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sklp"]
atlas = ExtResource("6_b1djv")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ang5e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14jxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi5x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnhdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocaq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie11d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57pgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1d47")
}],
"loop": true,
"name": &"Appear",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuu6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fvr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vpj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_het4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n2ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqubs")
}],
"loop": true,
"name": &"DoubleJump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rae1y")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvxfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_225eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se7h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf8js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1hlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh8ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irjsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s58cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaw01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u3fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y32lr")
}],
"loop": true,
"name": &"Idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_kgrnm")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfa6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgpcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p46aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsk1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc1u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64ebr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_085sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kj5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dgeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ib1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrukj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sklp")
}],
"loop": true,
"name": &"Run",
"speed": 20.0
}]

[sub_resource type="Curve" id="Curve_p6vp8"]
_data = [Vector2(0, 0.990909), 0.0, 0.0, 0, 0, Vector2(1, 0.454545), -1.49313, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_mteg2"]
resource_name = "RESET"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_cxjea"]
resource_name = "succ"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.5664]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vaac7"]
_data = {
"RESET": SubResource("Animation_mteg2"),
"succ": SubResource("Animation_cxjea")
}

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_mask = 2
script = ExtResource("1_vc07f")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_jkjx1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ang5e")
animation = &"Idle"
frame_progress = 0.805736

[node name="ParticlesDust" type="CPUParticles2D" parent="."]
position = Vector2(0, 15)
emitting = false
one_shot = true
explosiveness = 0.8
texture = ExtResource("8_mbcms")
emission_shape = 3
emission_rect_extents = Vector2(10.124, 1)
direction = Vector2(0, -90)
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_p6vp8")

[node name="SfxExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_tlwww")
volume_db = -5.0

[node name="SfxJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_63k56")
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vaac7")
}
